@@ -1,3 +1,8 @@
+2005-06-26  Masayuki Ataka  <ataka@milk.freemail.ne.jp>
+
+	* w3m.el (w3m-relationship-estimate-rules): Add an rule for Yahoo
+	Search Beta.
+
 2005-06-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* shimbun/nnshimbun.el: Changes to support an ephemeral group.
